--- a/Front/main.html
+++ b/Front/main.html
@@ -13,14 +13,11 @@
                 <tr>
                     <td>
                         <div id="game-container" style="width: 500px">
-                            <div>
-                                <span id="options-link" title="game options">Game</span>
-                                | <span id="display-link" title="size/position">Display</span> |
-                                <span id="controls-link" title="keyboard/mouse controls">Controls</span> |
-                                <span id="import-link" title="load exported game">Import</span> |
-                                <span id="export-link" title="same game to be impoorted">Export</span>
+                            <div style="margin-top: 40px; margin-bottom: 10px; text-align: center">
+                                <button id="startGame">Start</button>
                             </div>
                             <div id="board" class="board" ondrag="return false;" ondragstart="return false;"></div>
+                            <div style="display: flex; align-items: center"></div>
                         </div>
                     </td>
                 </tr>
