--- a/Front/main.html
+++ b/Front/main.html
@@ -12,7 +12,7 @@
             <tbody>
                 <tr>
                     <td>
-                        <div id="game-container" style="width: 500px">
+                        <div id="game-container">
                             <div style="margin-top: 40px; margin-bottom: 10px; text-align: center">
                                 <button id="startGame">Start</button>
                             </div>
